--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "colorette": "^2.0.19",
     "commander": "^2.20.3",
     "cross-spawn": "^7.0.3",
+    "date-fns": "^2.29.3",
     "electron-to-chromium": "^1.4.284",
     "enhanced-resolve": "^5.12.0",
     "envinfo": "^7.8.1",
@@ -91,9 +92,9 @@
     "webpack-cli": "^5.0.1"
   },
   "scripts": {
-
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
